Revision history for Git-Background

{{$NEXT}}

0.007_01  2023-08-05 16:02:13 UTC

  - The git used for the tests now always outputs UTF-8, as the real
    Git does.
  - Added a new test to test the UTF-8 handling.

0.007  2023-08-05 12:30:25 UTC

  - use binmode($fh, ':encoding(UTF-8)') on the file handles before reading
    the output from git.
  - Bump required Perl to 5.10, which is required by Future anyway.

0.006  2022-11-05 13:16:26 UTC

  - Switch license to the ISC license
  - Bumped dependency to Future 0.49 and use the new set_udata/udata methods
  - Remove test dependency on Test::Fatal

0.005  2022-04-03 16:05:30 UTC

  - Use Git::Background::Future->fail instead of Future->fail when
    Proc::Background fails. Otherwise mthods like stdout() wouldn't be
    available on these errors but on others, which would be confusing.

0.004  2022-01-08 21:19:34 UTC

  - run() throws an error if it is run in void context

0.003  2022-01-01 22:55:58 UTC

  - Bump dependency on Future to 0.40, which introduced Future::Exception

0.002  2022-01-01 19:40:33 UTC

  - API change to use Future

0.001  2021-12-20 20:01:35 UTC

  - Initial release