@@ -31,7 +31,6 @@ my %WriteMakefileArgs = (
         'File::Path'            => '2.07',
         'File::Spec'            => 0,
         'File::Spec::Functions' => 0,
-        'Test2::Plugin::UTF8'   => 0,
         'Test::More'            => '0.88',
         lib                     => 0,
         overload                => 0,
@@ -54,7 +53,6 @@ my %FallbackPrereqs = (
     Future                  => '0.49',
     'Proc::Background'      => '1.30',
     'Scalar::Util'          => 0,
-    'Test2::Plugin::UTF8'   => 0,
     'Test::More'            => '0.88',
     lib                     => 0,
     overload                => 0,
