@@ -1,3 +1,5 @@
+[ControlStructures::ProhibitPostfixControls]
+flowcontrol = die skip
 [-RegularExpressions::RequireDotMatchAnything]
 [-RegularExpressions::RequireExtendedFormatting]
 [-RegularExpressions::RequireLineBoundaryMatching]
